@startuml classes
left to right direction
skinparam actorStyle Awesome
skinparam ArrowThickness 1
!theme aws-orange
skinparam backgroundcolor White

'Titre'
title Classes

'Comment'
class Comment {
    {static} +id: int
    +creation_date: date
    +content: longtext
    +fullName: string
}

'Trick Group'
class Trick_Group {
    {static} +id: int
    +name: string
}

'Login Credentials'
class LoginCredentials {
    {static} +id: int
    +email: string
    +roles: longtext
    +password: string
    +username: string
    +is_active: boolean
}

'Trick'
class Trick {
    {static} +id: int
    +name: string
    +description: longtext
    +slug: string 
    +created_at: date 
    +updated_at: date
}

'Hash'
class Hash {
    {static} +id: int
    +hash: string
    +is_active: bool 
}

'Media'
class Media {
    {static} +id: int
    +type: string
    +path: string 
}

'Avatar'
class Avatar {
    {static} +id: int
    +path: string
}

'Déroulement'
Hash "1..*" -- "1" LoginCredentials: $warning("SECURE")
Avatar "1" -- "1" Comment : $warning("ILLUSTRATE")
LoginCredentials "1" -- "*" Comment: $warning("LEAVE")
Trick "1" -- "*" Comment: $warning("CONTAIN")
Trick_Group "1" -- "*" Trick: $warning("HAVE")
Trick "1" -- "1..*" Media: $warning("DISPLAY")
@enduml